Fix pagination information overflow on phone

--- a/app/assets/stylesheets/formadmin/components/_pagination.scss
+++ b/app/assets/stylesheets/formadmin/components/_pagination.scss
@@ -86,4 +86,7 @@
     text-align: center;
     width: 100%;
   }
+  .pagination_information {
+    margin-top: 30px;
+  }
 }
